@@ -77,6 +77,8 @@
 	* Role differentiation:
 	  - Tourists get automatic typ identification for shop items
 	  - Healers can see how wounded monsters are (by L)
+	  - Knights get a weight bonus for body armor heavier than
+	      studded leather armor
 
 	* user interface improvements:
 	  - HP notify, showing HP changes in the message area (from NAO)
